Update about page

--- a/src/index.html
+++ b/src/index.html
@@ -27,35 +27,33 @@
     <div class="header__border">
         <div class="header__container">
             <header>
-                <img src="favicon.png" alt="Ethan Bulmer's logo"/>
-                Ethan Bulmer
+                <img id="favicon" alt="Activity Signon's logo"/>
+                Activity Signon
             </header>
 
             <nav aria-labelledby="mainnavigation">
                 <h2 id="mainnavigation" class="visuallyhidden">Main Navigation</h2>
                 <ul>
-                    <li><a href="./">Home</a></li>
-                    <li><a href="./#projects" aria-current="page">Projects</a></li>
-                    <li><a href="./#experiments">Experiments</a></li>
-                    <li><a href="./#languages">Languages</a></li>
+                    <li><a href="/" aria-current="page">About</a></li>
+                    <li><a href="#">Login</a></li>
                 </ul>
             </nav>
         </div>
     </div>
 
     <main aria-labelledby="sportselection">
-        <h1 id="sportselection">Sport Selection by Ethan Bulmer</h1>
-        <p>First-in, first-served student sport selection website</p>
-        <p>Students log into the website during a set opening window and enrol into the sport of their choice</p>
+        <h1 id="sportselection">Activity Signon by Ethan Bulmer</h1>
+        <p>First-in, first-served student activity selection website</p>
+        <p>Students log into the website during a set opening window and enrol into the activity of their choice</p>
 
         <section aria-labelledby="selectionpage">
             <div class="description">
-                <h2 id="selectionpage">Selection Made Easy</h2>
+                <h2 id="selectionpage">Signon Made Easy</h2>
                 <ul>
                     <li>Students are sent an email containing a link to log into the site</li>
-                    <li>Student see the list of sports, enrol into the one they want, and they're done</li>
+                    <li>Student see the list of activties, sign onto the one they want, and they're done</li>
                     <li>First in first served selection process</li>
-                    <li>Customised themes for each school to make students feel at home</li>
+                    <li>Customisable themes to make students feel at home</li>
                     <li>Works on mobile devices</li>
                 </ul>
             </div>
@@ -70,7 +68,7 @@
                     <li>Restrict sports by year level and financial status</li>
                     <li>Bulk import student emails from IDAttend</li>
                     <li>Bulk export sport selections to csv</li>
-                    <li>Selections can also be made for teachers</li>
+                    <li>Signons can also be made for teachers</li>
                 </ul>
             </div>
             <img id="sport_selection_admin" alt="Screenshot of admin page"/>
@@ -115,10 +113,10 @@
                 <ul>
                     <li>Blazing fast servers</li>
                     <li>Selections any time</li>
+                    <li>Unlimited signons</li>
                     <li>Personalised theme</li>
-                    <li>Custom domain name</li>
                 </ul>
-                <div class="price">$0.75<small> /student /year</small></div>
+                <div class="price">$0.75<small> /user /year</small></div>
                 <a class="button" href="mailto:ethan@ethanbulmer.com?subject=Sport Selection purchase interest" target="_blank">Contact us &gt;</a>
             </div>
         </section>
