Update privacy policy and terms and conditions

--- a/src/index.html
+++ b/src/index.html
@@ -117,13 +117,16 @@
                     <li>Personalised theme</li>
                 </ul>
                 <div class="price">$0.75<small> /user /year</small></div>
-                <a class="button" href="mailto:ethan@ethanbulmer.com?subject=Sport Selection purchase interest" target="_blank">Contact us &gt;</a>
+                <a id="start_trial" class="button" href="#" target="_blank">Start your 30 day free trial &gt;</a>
             </div>
         </section>
 
-        <section aria-labelledby="privacy">
+        <section aria-labelledby="policies">
             <div class="center">
-                <a href="https://sportselection.ethanbulmer.com/privacy.html" id="privacy">Privacy policy</a>
+                <h2 id="policies" class="visuallyhidden">Privacy policy and terms and conditions</h2>
+                <a href="privacy.html">Privacy policy</a> |
+                <a href="terms.html">Terms and Conditions</a> |
+                <a href="mailto:ethan@ethanbulmer.com?subject=Activity Signon Enquiry">Contact us</a>
             </div>
         </section>
     </main>
