--- a/src/static/privacy.html
+++ b/src/static/privacy.html
@@ -20,17 +20,18 @@
 <h2>Information we collect</h2>
 <p>We may ask you to provide personal information through this site. We will only do this to provide you this site's service.</p>
 
-<p>We only collect:</p>
+<p>By registering with us, you are deemed a customer, or a prospective customer, and we may collect the following personal information to allow us to conduct business with you:</p>
 <ul>
-  <li>Emails, to give users access to the site and to identify their selections.</li>
-  <li>Student's year level, for restricting students to certain sports</li>
+  <li>Name</li>
+  <li>Email address</li>
+  <li>Phone number</li>
+  <li>Company name</li>
+  <li>Billing address</li>
 </ul>
 
-<p>We do <b>not</b> collect:</p>
+<p>For users who are only using the site to sign on to an activity, we may collection the following personal information to provide you with the sign on service</p>
 <ul>
-  <li>Names</li>
-  <li>Addresses</li>
-  <li>Phone numbers</li>
+  <li>Email address, to send you a login link and identify your activity selection</li>
 </ul>
 
 <p>We will not add you to a mailing list, or give your personal information to third parties, unless required by law.</p>
