--- a/src/admin/admin.html
+++ b/src/admin/admin.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
 
     <script src="https://kit.fontawesome.com/a8132e88a5.js" crossorigin="anonymous" async></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
     <script>
       const config = JSON.parse('<%= JSON.stringify(htmlWebpackPlugin.options.templateParameters) %>');
@@ -39,12 +40,14 @@
       
       <form id="loginForm" action="" method="post">
         <p class="error" aria-live="polite">Please use a modern browser with javascript enabled to login</p>
-        <label for="username">Username:</label>
-        <input type="text" name="username" id="username" placeholder="Username" autofocus/>
+        <label for="username">Email:</label>
+        <input type="email" name="email" id="email" placeholder="Email" autofocus/>
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" placeholder="Password"/>
         <button id="submit">Login</button>
       </form>
+
+      <a id="createAccountButton" href="#createAccount">Or create an account &gt;</a>
       
       <script>
         // Ensure javascript and arrow functions are enabled
