--- a/src/static/privacy.html
+++ b/src/static/privacy.html
@@ -39,6 +39,9 @@
 <h2>Cookies</h2>
 <p>We will only use cookies to identify you once you have logged in. These cookies will be used to provide you with this site's service. No cookies will be used if you have not logged in.</p>
 
+<h2>Google reCAPTCHA</h2>
+<p>When creating an account, Google reCAPTCHA is used. Google reCAPTCHA is a security service that protects websites from spam and abuse provided by Google, Inc. ("Google"). This service requires use of cookies.</p>
+
 <h2>Security</h2>
 <p>Your information is stored in one of the most secure data centers available today. The data centers and networks are architected to protect your information from unauthorised access.</p>
 <p>Passwords are stored in a salted and hashed format, making it practially impossible to decrypt.</p>
