Update cookies section in privacy policy

--- a/src/static/privacy.html
+++ b/src/static/privacy.html
@@ -37,10 +37,8 @@
 <p>We will not add you to a mailing list, or give your personal information to third parties, unless required by law.</p>
 
 <h2>Cookies</h2>
-<p>We will only use cookies to identify you once you have logged in. These cookies will be used to provide you with this site's service. No cookies will be used if you have not logged in.</p>
-
-<h2>Google reCAPTCHA</h2>
-<p>When creating an account, Google reCAPTCHA is used. Google reCAPTCHA is a security service that protects websites from spam and abuse provided by Google, Inc. ("Google"). This service requires use of cookies.</p>
+<p>Cookies will be used to identify you once you have logged in. These cookies will be used to provide you with this site's service.</p>
+<p>When creating an account, Google reCAPTCHA is used. Google reCAPTCHA is a security service that protects websites from spam and abuse provided by Google, Inc. ("Google"). This service requires the use of cookies when on an account creation page.</p>
 
 <h2>Security</h2>
 <p>Your information is stored in one of the most secure data centers available today. The data centers and networks are architected to protect your information from unauthorised access.</p>
