Add copyright notice to front page

--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,8 @@
                 <a href="privacy.html">Privacy policy</a> |
                 <a href="terms.html">Terms and Conditions</a> |
                 <a href="mailto:ethan@ethanbulmer.com?subject=Activity Signon Enquiry">Contact us</a>
+                <br/>
+                Ethan Bulmer © <script>new Date().getFullYear()</script>
             </div>
         </section>
     </main>
