Update 30 day free trial link

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                     <li>Personalised theme</li>
                 </ul>
                 <div class="price">$0.75<small> /user /year</small></div>
-                <a id="start_trial" class="button" href="#" target="_blank">Start your 30 day free trial &gt;</a>
+                <a id="start_trial" class="button" href="/admin/#createAccount" target="_blank">Start your 30 day free trial &gt;</a>
             </div>
         </section>
 
