Fix copyright year

--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
                 <a href="terms.html">Terms and Conditions</a> |
                 <a href="mailto:ethan@ethanbulmer.com?subject=Activity Signon Enquiry">Contact us</a>
                 <br/>
-                Ethan Bulmer © <script>new Date().getFullYear()</script>
+                Ethan Bulmer © <script>document.write(new Date().getFullYear())</script>
             </div>
         </section>
     </main>
