Remove 'by Ethan Bulmer'

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <main aria-labelledby="sportselection">
-        <h1 id="sportselection">Activity Signon by Ethan Bulmer</h1>
+        <h1 id="sportselection">Activity Signon</h1>
         <p>First-in, first-served student activity selection website</p>
         <p>Students log into the website during a set opening window and enrol into the activity of their choice</p>
 
