Make Login button link to admin page

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 <h2 id="mainnavigation" class="visuallyhidden">Main Navigation</h2>
                 <ul>
                     <li><a href="/" aria-current="page">About</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="/admin/">Login</a></li>
                 </ul>
             </nav>
         </div>
